test/custom/elaboration/bad/typeclass_free_variables_ambiguous.mle
class H 'a { fail : 'b }
